# Cpp_Minigame_Collection

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.cpp  snake.cpp  test.text
games/: NumberGuessingGame.cpp  Word_Search_Game.cpp  pong.cpp
include/: Game.h  NumberGuessingGame.h  WordSearchGame.h
src/: main  main.cpp
